Add reset password

--- a/templates/register.html
+++ b/templates/register.html
@@ -23,7 +23,7 @@
         
         autofocus="",
         type="email",
-        id="email_field",
+        id="email_field"
       )}}
       {{field_errors(form.email)}}
     </div>
@@ -36,7 +36,7 @@
         type="text",
         
         class="form__field-input",
-        id="surname_field",
+        id="surname_field"
       )}}
       {{field_errors(form.surname)}}
     </div>
@@ -46,7 +46,7 @@
         type="text",
         
         class="form__field-input",
-        id="name_field",
+        id="name_field"
       )}}
       {{field_errors(form.name)}}
     </div>
@@ -89,7 +89,7 @@
         
         class="form__field-input",
         id="password_field",
-        autocomplete="off",
+        autocomplete="off"
       )}}
       {{field_errors(form.password)}}
     </div>
