--- a/templates/register.html
+++ b/templates/register.html
@@ -104,6 +104,11 @@
       )}}
       {{field_errors(form.password_again)}}
     </div>
+      {{form_field(form.recaptcha)}}
+      {{form.recaptcha.label(for="password_repeat", class="form__field-label")}}
+      {{form.recaptcha(id="recaptcha")}}
+      {{field_errors(form.recaptcha)}}
+      </div>
     <div class="form__buttons s-buttons">
       {{form.submit(
         type="submit",
