--- a/templates/base.html
+++ b/templates/base.html
@@ -1,112 +1,121 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+<head>
     {% block head %}
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <!-- Bootstrap -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
+        <meta charset="utf-8"/>
+        <meta
+                name="viewport"
+                content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
+        <!-- Bootstrap -->
+        <link
+                rel="stylesheet"
+                href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+                integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+                crossorigin="anonymous"
+        />
+        <script
+                src="https://code.jquery.com/jquery-3.4.1.min.js"
+                integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+                crossorigin="anonymous"
+        ></script>
+        <script
+                src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+                integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+                crossorigin="anonymous"
+        ></script>
+        <script
+                src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+                integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+                crossorigin="anonymous"
+        ></script>
 
-    <!-- Beautiful calendar -->
-    <link href="{{url_for('static', filename='node_modules/air-datepicker/dist/css/datepicker.min.css')}}" rel="stylesheet" type="text/css">
-    <script src="{{url_for('static', filename='node_modules/air-datepicker/dist/js/datepicker.min.js')}}"></script>
+        <!-- Beautiful calendar -->
+        <link href="{{ url_for('static', filename='node_modules/air-datepicker/dist/css/datepicker.min.css') }}"
+              rel="stylesheet" type="text/css">
+        <script src="{{ url_for('static', filename='node_modules/air-datepicker/dist/js/datepicker.min.js') }}"></script>
 
-    
-    <script src="{{url_for('static', filename='js/script.js')}}"></script>
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}" />
+
+        <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+        <link rel="stylesheet" type="text/css"
+              href="{{ url_for('static', filename='css/style.css') }}"/>
     {% endblock head %}
     <title>{% block title %}MatBoy{% endblock %}</title>
-  </head>
+</head>
 
-  <body>
-    {% block header %}
+<body>
+{% block header %}
     <header class="">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand logo", href="/">MatBoy</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarContent">
-          
-          
-          <ul class="navbar-nav mr-auto">
-            {% if menu %}
-              {% for title, link in menu %}
-                {% if loop.last %}
-                  <li class="nav-item">
-                    <a class="nav-link" href="#" disabled>
-                      {{title}}
-                      <span class="sr-only">(current)</span>
-                    </a>
-                  </li>
-                {% else %}
-                  <li class="nav-item active">
-                    <a class="nav-link" href="{{link}}">
-                      {{title}}
-                    </a>
-                  </li>
-                {% endif %}
-              {% endfor %}
-            {% endif %}
-          </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand logo" , href="/">MatBoy</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarContent">
 
-          <div class="login_manager">
-              {% if current_user.is_authenticated %}
-                <a 
-                  class="navbar-brand"  
-                  href="/profile/{{current_user.id}}"
-                >
-                  {{ current_user.name }}
-                </a>
-                <a class="btn button_primary" onclick="redirectWithStep(event);" href="/logout">
-                  Выйти
-                </a>
-              {% else %}
-                <a class="btn button_success" onclick="redirectWithStep(event);" href="/register">
-                  Зарегистрироваться
-                </a>
-                <a class="btn button_primary" onclick="redirectWithStep(event)" href="/login">
-                  Войти
-                </a>
-              {% endif %}
-          </div>
-        </div>
-      </nav>
+
+                <ul class="navbar-nav mr-auto">
+                    {% if menu %}
+                        {% for title, link in menu %}
+                            {% if loop.last %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#" disabled>
+                                        {{ title }}
+                                        <span class="sr-only">(current)</span>
+                                    </a>
+                                </li>
+                            {% else %}
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="{{ link }}">
+                                        {{ title }}
+                                    </a>
+                                </li>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                </ul>
+
+                <div class="login_manager">
+                    {% if current_user.is_authenticated %}
+                        <a class="navbar-brand" href="{{ url_for('web_pages.feedback') }}">
+                            Обратная связь</a>
+                        <a
+                                class="navbar-brand"
+                                href="/profile/{{ current_user.id }}"
+                        >
+                            {{ current_user.name }}
+                        </a>
+                        <a class="btn button_primary" onclick="redirectWithStep(event);"
+                           href="/logout">
+                            Выйти
+                        </a>
+                    {% else %}
+                        <a class="btn button_success" onclick="redirectWithStep(event);"
+                           href="/register">
+                            Зарегистрироваться
+                        </a>
+                        <a class="btn button_primary" onclick="redirectWithStep(event)"
+                           href="/login">
+                            Войти
+                        </a>
+                    {% endif %}
+                </div>
+            </div>
+        </nav>
     </header>
-    {% endblock header %}
-    {% block main %}
+{% endblock header %}
+{% block main %}
     <!-- Begin page content -->
     <main role="main" class="container">
-      {% block content %}
-      {% endblock content%}
+        {% block content %}
+        {% endblock content %}
     </main>
-    {% endblock main %}
-    
-    {% block toasts %}
-      {% include 'toasts.html' %}
-    {% endblock toasts %}
-  </body>
+{% endblock main %}
+
+{% block toasts %}
+    {% include 'toasts.html' %}
+{% endblock toasts %}
+</body>
 </html>
