--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -2,29 +2,32 @@
 
 {% block content %}
     <style>
-        .ck.ck-editor {
-            width: 100%;
-        }
+    #editor {
+        width: 100%;
+        border: 1px solid #ced4da;
+        margin-top: 25px;
+    }
+    #editor
     </style>
     <div class="title_container">
         <h1 class="page_title">
-            Новость для турнира "{{ tour.title }}"
+            Обратная связь
         </h1>
     </div>
 
     <div class="box_container">
-        <div class="box" style="max-width: 100%">
-            <form method="post" id="ckeditor-form" novalidate>
+        <div class="box">
+            <form method="post" id="feedback-form" novalidate>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text"
-                              id="inputGroup-sizing-default">Заголовок</span>
+                              id="inputGroup-sizing-default">Тема вопроса</span>
                     </div>
                     <input type="text" class="form-control" aria-label="Sizing example input"
                            aria-describedby="inputGroup-sizing-default" name="title" id="title">
                 </div>
                 <div class="input-group mb-3">
-                    <textarea name="content" id="editor" placeholder="Контент" required></textarea>
+                    <div id="editor" class="feedback-field"></div>
                 </div>
                 <div class="input-group justify-content-end">
                     <input type="submit" class="btn btn-primary">
@@ -32,16 +35,9 @@
             </form>
         </div>
     </div>
-    <script src="{{ url_for('static', filename='ckeditor5/build/ckeditor.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/creator.js') }}"></script>
+    <script src="{{ url_for('static', filename='ckeditor5_feedback/build/ckeditor.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/feedback.js') }}"></script>
     <script>
-        $(document).ready(function () {
-            {% if title %}
-                $('#title').val(`{{ title }}`)
-            {% endif %}
-            {% if content %}
-                editor.setData(`{{ content|safe }}`);
-            {% endif %}
-        })
+
     </script>
 {% endblock %}
