--- a/templates/reset_password_mail.html
+++ b/templates/reset_password_mail.html
@@ -1,3 +1,3 @@
 <h1>Восстановление пароля MatBoy</h1>
-<h3>Для того чтобы восстаноить пароль перейдите по ссылке:</h3>
+<p>Для того чтобы восстановить пароль, перейдите по ссылке:</p>
 <strong>{{ url }}</strong>
