--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="box_container">
-        <div class="box">
+        <div class="box" style="max-width: 100%">
             <form method="post" id="feedback-form" novalidate>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
