--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="box_container">
-        <div class="box">
+        <div class="box w-100">
             <form method="post" id="ckeditor-form" novalidate>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
