--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -75,19 +75,15 @@
             {% endif %}
         </div>
     </div>
-    <div class="box_container">
-        {% if posts %}
-            {% for post in posts %}
-                <div class="box w-100">
-                    <h3>{{ post.title }}</h3>
-                    {{ post.content|safe }}
-                </div>
-            {% endfor %}
-        {% else %}
-            <div class="box w-100">
-                <p>Новостей пока нет</p>
+    <div id="post_container" class="box_container">
+        <script src="{{url_for('static', filename='js/tournament.js')}}"></script>
+        <template id="card">
+            <div id="post_card" class="box w-100">
+                <h3 id="title"></h3>
+                <div id="content"></div>
+                <p id="datetime_info" align="right"></p>
             </div>
-        {% endif %}
+        </template>
     </div>
 
 {% endblock content %}
