Add resource delete post Add comments Fix tournament template Fix load image ck editor

--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -80,7 +80,7 @@
         <template id="card">
             <div id="post_card" class="box w-100">
                 <h3 id="title"></h3>
-                <div id="content"></div>
+                <div id="content" class="ck-content clearfix"></div>
                 <p id="datetime_info" align="right"></p>
             </div>
         </template>
