fix news posts title

--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -62,7 +62,7 @@
             </dl>
         </div>
     </div>
-    <div class="title_container">
+    <div id="news_title" class="title_container">
         <h1 class="page_title">
             Новости турнира
         </h1>
