Edit invites, bug fix

--- a/templates/sign__.html
+++ b/templates/sign__.html
@@ -16,6 +16,8 @@
       </div>
       <div class="shadow-box shadow-box_additionals">
         <span class="form-additional-message">
+          Передумали?&nbsp;<a href="/" class="form-additional-message__link">На главную</a>
+          <br>
           {% block link_to %}
           
           {% endblock link_to %}
