--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -31,7 +31,7 @@
     <div class="page_description box">
         {{ tour.description }}
     </div>
-    <div class="box_container">
+    <div class="box_container box_container-covid">
         <div class="box box-large">
             <div class="shadow-box__title">
                 Лиги
