add edit & delete buttons for post

--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -79,6 +79,17 @@
         <script src="{{url_for('static', filename='js/tournament.js')}}"></script>
         <template id="card">
             <div id="post_card" class="box w-100">
+                {% if current_user.id == tour.chief_id %}
+                <div class="link_menu" align="right">
+                    <a class="link link-small" onclick="" href="">
+                        редактировать
+                    </a>
+                     | 
+                    <a class="link link-small" onclick="deletePost()">
+                        удалить
+                    </a>
+                </div>
+                {% endif %}
                 <h3 id="title"></h3>
                 <div id="content" class="ck-content clearfix"></div>
                 <p id="datetime_info" align="right"></p>
