--- a/templates/base.html
+++ b/templates/base.html
@@ -76,11 +76,16 @@
                         {% endfor %}
                     {% endif %}
                 </ul>
-
+                <ul class="navbar-nav mr-3">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('web_pages.feedback') }}">
+                            Обратная связь
+                        </a>
+                    </li>
+                </ul>
                 <div class="login_manager">
                     {% if current_user.is_authenticated %}
-                        <a class="navbar-brand" href="{{ url_for('web_pages.feedback') }}">
-                            Обратная связь</a>
+                    
                         <a
                                 class="navbar-brand"
                                 href="/profile/{{ current_user.id }}"
