--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -81,7 +81,7 @@
             <div class="post_card box w-100">
                 {% if current_user.id == tour.chief_id %}
                 <div class="link_menu" align="right">
-                    <a id="" class="edit link link-small" onclick="" href="">
+                    <a id="" class="edit link link-small" onclick="">
                         редактировать
                     </a>
                      | 
