--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -15,6 +15,10 @@
     <div class="box_container">
         <div class="box w-100">
             <form method="post" id="ckeditor-form" novalidate>
+                <input type="hidden" value="{{ tour.id }}" id="tour-id" name="tournament_id">
+                {% if post %}
+                    <input type="hidden" value="{{ post.id }}" id="post-id">
+                {% endif %}
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text"
@@ -36,6 +40,7 @@
             </form>
         </div>
     </div>
+    <script src="{{ url_for('static', filename='js/post.js') }}"></script>
     <script src="{{ url_for('static', filename='ckeditor5/build/ckeditor.js') }}"></script>
     <script src="{{ url_for('static', filename='js/creator.js') }}"></script>
     <script>
