--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -95,6 +95,11 @@
                 <p class="datetime_info" align="right"></p>
             </div>
         </template>
+        <template id="empty_posts">
+            <div class="page_description box post_card">
+                Новостей пока нет
+            </div>
+        </template>
     </div>
 
 {% endblock content %}
