Add function get hide post

--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -81,12 +81,12 @@
             <div class="post_card box w-100">
                 {% if current_user.id == tour.chief_id %}
                 <div class="link_menu" align="right">
-                    <a id="" class="edit link link-small" onclick="">
+                    <a class="edit link link-small" onclick="">
                         редактировать
                     </a>
                      | 
-                    <a id="" class="delete link link-small" onclick="">
-                        удалить
+                    <a class="hide link link-small" onclick="">
+                        скрыть
                     </a>
                 </div>
                 {% endif %}
