Complete delete post

--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -120,7 +120,7 @@
                         отобразить
                     </a>
                     |
-                    <a class="hide link link-small">
+                    <a class="delete link link-small">
                         удалить
                     </a>
                 </div>
