edit registration form

--- a/templates/register.html
+++ b/templates/register.html
@@ -10,8 +10,7 @@
     data-remote="true"
 >
 {% include "vk/vk_reg.html" %}
-<div id="vk_notifications_div" class="form__field-label" style="margin-top: 10px" hidden="true">
-  {{form.vk_notifications}} {{form.vk_notifications.label}}
+<div id="vk_notification" class="hidden form__field-label" style="margin-top: 10px">
 </div>
 {{form.hidden_tag()}}
   <fieldset class="form__fields">
