reorganization web-utils

--- a/templates/vk/vk_reg.html
+++ b/templates/vk/vk_reg.html
@@ -6,7 +6,7 @@
     id="vk_login_button" 
     style="margin-bottom: 20px; padding: 10px"
     onclick="getAuthInfo()">
-    <img src="{{url_for('static', filename='logo/vk_logo.png')}}" 
+    <img src="{{url_for('static', filename='img/logo/vk_logo.png')}}" 
     width="24" height="22" 
     alt="VK" 
     style="vertical-align: text-bottom; margin-right: 10px">
