--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% from 'models_macroses.html' import team_status, team_league, check_specified %}
+{% from "form_macroses.html" import form_field %}
 
 {% block title %}
     Профиль - {{ user.fullname }}
@@ -29,7 +30,7 @@
                 <dd class="col-sm-3">Возраст:</dd>
                 <dt class="col-sm-9">{{ user.years_old }}</dt>
             </dl>
-            <div class="subscribe">
+            <div class="subscribe mb-3">
                 <div class="subscribe__item">
                     <label for="subscribe-email-input">Уведомления по почте:</label>
                     {% if current_user.email_notifications %}
@@ -49,7 +50,47 @@
                     </div>
                 {% endif %}
             </div>
+            <div class="edit-user">
+                <button type="button" class="btn btn-secondary btn-sm" id="edit-password"
+                        data-toggle="modal" data-target="#edit-password-modal">
+                    Сменить пароль
+                </button>
+            </div>
         </div>
     </div>
+    <div class="modal fade" id="edit-password-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Смена пароля</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="edit_password_form">
+                        {{ edit_password_form.hidden_tag() }}
+                        {{ form_field(edit_password_form.password) }}
+                        {{ edit_password_form.password.label(for="password", class="form__field-label") }}
+                        {{ edit_password_form.password(class="form__field-input",
+                                                    autocomplete="off") }}
+                        </div>
+                        {{ form_field(edit_password_form.password_again) }}
+                        {{ edit_password_form.password_again.label(for="password_again", class="form__field-label") }}
+                        {{ edit_password_form.password_again(class="form__field-input",
+                                                    autocomplete="off") }}
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="close-password-modal">Закрыть</button>
+                    <input type="submit" class="btn btn-primary" form="edit_password_form" value="Изменить">
+                </div>
+            </div>
+        </div>
+    </div>
+    <template id="error-input-template">
+        <div class="s-error"></div>
+    </template>
     <script src="{{ url_for('static', filename='js/profile.js') }}"></script>
 {% endblock content %}
