--- a/templates/profile.html
+++ b/templates/profile.html
@@ -51,14 +51,23 @@
                 {% endif %}
             </div>
             <div class="edit-user">
-                <button type="button" class="btn btn-secondary btn-sm" id="edit-password"
-                        data-toggle="modal" data-target="#edit-password-modal">
-                    Сменить пароль
-                </button>
+                <div class="button-container mb-3">
+                    <button type="button" class="btn btn-secondary btn-sm" id="edit-password"
+                            data-toggle="modal" data-target="#edit-password-modal">
+                        Сменить пароль
+                    </button>
+                </div>
+                <div class="button-container">
+                    <button type="button" class="btn btn-secondary btn-sm" id="edit-email"
+                            data-toggle="modal" data-target="#edit-email-modal">
+                        Сменить почту
+                    </button>
+                </div>
             </div>
         </div>
     </div>
-    <div class="modal fade" id="edit-password-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="edit-password-modal" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -68,7 +77,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form id="edit_password_form">
+                    <form id="edit-password-form">
                         {{ edit_password_form.hidden_tag() }}
                         {{ form_field(edit_password_form.password) }}
                         {{ edit_password_form.password.label(for="password", class="form__field-label") }}
@@ -83,8 +92,41 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="close-password-modal">Закрыть</button>
-                    <input type="submit" class="btn btn-primary" form="edit_password_form" value="Изменить">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                            id="close-password-modal">Закрыть
+                    </button>
+                    <input type="submit" class="btn btn-primary" form="edit_password_form"
+                           value="Изменить">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="edit-email-modal" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Смена почты</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="edit-email-form">
+                        {{ edit_email_form.hidden_tag() }}
+                        {{ form_field(edit_email_form.email) }}
+                        {{ edit_email_form.email.label(for="email", class="form__field-label") }}
+                        {{ edit_email_form.email(class="form__field-input",
+                                                    autocomplete="off") }}
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                            id="close-email-modal">Закрыть
+                    </button>
+                    <input type="submit" class="btn btn-primary" form="edit-email-form"
+                           value="Изменить">
                 </div>
             </div>
         </div>
