--- a/templates/profile.html
+++ b/templates/profile.html
@@ -95,7 +95,7 @@
                     <button type="button" class="btn btn-secondary" data-dismiss="modal"
                             id="close-password-modal">Закрыть
                     </button>
-                    <input type="submit" class="btn btn-primary" form="edit_password_form"
+                    <input type="submit" class="btn btn-primary" form="edit-password-form"
                            value="Изменить">
                 </div>
             </div>
