Fix send notifications for empty users. Add block buttons in process Edit function "edit email"

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -96,7 +96,7 @@
                             id="close-password-modal">Закрыть
                     </button>
                     <input type="submit" class="btn btn-primary" form="edit-password-form"
-                           value="Изменить">
+                           value="Изменить" id="edit-password-submit">
                 </div>
             </div>
         </div>
@@ -126,7 +126,7 @@
                             id="close-email-modal">Закрыть
                     </button>
                     <input type="submit" class="btn btn-primary" form="edit-email-form"
-                           value="Изменить">
+                           value="Изменить" id="edit-email-submit">
                 </div>
             </div>
         </div>
