--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,6 +33,8 @@
             {% if current_user.integration_with_VK %}
             {% else %}
                 {% include "vk/vk_integration.html" %}
+                <div id="vk_notification" class="hidden form__field-label" style="margin-top: 10px">
+                </div>
             {% endif %}
             <div class="subscribe mb-3">
                 <div class="subscribe__item">
