comments in VK integration js & html file

--- a/templates/vk/vk_integration.html
+++ b/templates/vk/vk_integration.html
@@ -5,7 +5,7 @@
     <p
     class="btn btn-primary" 
     id="vk_login_button" 
-    onclick="getAuthInfo()">
+    onclick="userAuth()">
     Привязать страницу ВКонтакте
     </p>
 </div>
