--- a/templates/vk/vk_reg.html
+++ b/templates/vk/vk_reg.html
@@ -6,7 +6,7 @@
     class="button button_wide button_primary" 
     id="vk_login_button" 
     style="margin-bottom: 20px; padding: 10px"
-    onclick="getAuthInfo()">
+    onclick="userAuth()">
     <img src="{{url_for('static', filename='img/logo/vk_logo.png')}}" 
     width="24" height="22" 
     alt="VK" 
